test de controllers completos