@@ -3,21 +3,19 @@ package sv.edu.udb.controller;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
+import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.http.MediaType;
+import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.test.web.servlet.MockMvc;
-import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 import sv.edu.udb.controller.request.GastoRequest;
 import sv.edu.udb.controller.response.GastoResponse;
-import sv.edu.udb.repository.domain.Usuario;
 import sv.edu.udb.service.GastoService;
-import sv.edu.udb.service.mapper.GastoMapper;
 
 import java.math.BigDecimal;
 import java.time.Month;
-import java.util.List;
+import java.util.Arrays;
 
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
@@ -25,40 +23,31 @@ import static org.mockito.Mockito.*;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
+@SpringBootTest
+@AutoConfigureMockMvc
 class GastoControllerTest {
 
+    @Autowired
     private MockMvc mockMvc;
 
-    @Mock
-    private GastoService gastoService;
-
-    @Mock
-    private GastoMapper gastoMapper;
-
-    @InjectMocks
-    private GastoController gastoController;
-
+    @Autowired
     private ObjectMapper objectMapper;
+
+    @MockitoBean
+    private GastoService gastoService;
 
     private GastoRequest gastoRequest;
     private GastoResponse gastoResponse;
 
     @BeforeEach
     void setUp() {
-        MockitoAnnotations.openMocks(this);
-        mockMvc = MockMvcBuilders.standaloneSetup(gastoController).build();
-        objectMapper = new ObjectMapper();
-
-        Usuario usuario = new Usuario();
-        usuario.setId(1L);
-
         gastoRequest = GastoRequest.builder()
                 .mes(Month.JANUARY)
                 .gastosBasicos(BigDecimal.valueOf(100.00))
                 .deudas(BigDecimal.valueOf(50.00))
                 .otrosGastos(BigDecimal.valueOf(30.00))
                 .ahorro(BigDecimal.valueOf(20.00))
-                .usuario(usuario)
+                .usuarioId(1L)
                 .build();
 
         gastoResponse = GastoResponse.builder()
@@ -68,15 +57,16 @@ class GastoControllerTest {
                 .deudas(BigDecimal.valueOf(50.00))
                 .otrosGastos(BigDecimal.valueOf(30.00))
                 .ahorro(BigDecimal.valueOf(20.00))
-                .usuario(usuario)
+                .usuarioId(1L)
                 .build();
     }
 
     @Test
     void testFindAllGastosByUsuario() throws Exception {
-        when(gastoService.findAllByUsuario(1L)).thenReturn(List.of(gastoResponse));
+        when(gastoService.findAllByUsuario(1L)).thenReturn(Arrays.asList(gastoResponse));
 
-        mockMvc.perform(get("/gastos/usuario/1"))
+        mockMvc.perform(get("/gastos/usuario/1")
+                        .accept(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$[0].id").value(1))
                 .andExpect(jsonPath("$[0].mes").value("JANUARY"));
@@ -88,7 +78,8 @@ class GastoControllerTest {
     void testFindGastoById() throws Exception {
         when(gastoService.findById(1L)).thenReturn(gastoResponse);
 
-        mockMvc.perform(get("/gastos/1"))
+        mockMvc.perform(get("/gastos/1")
+                        .accept(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.id").value(1))
                 .andExpect(jsonPath("$.mes").value("JANUARY"));
@@ -103,7 +94,7 @@ class GastoControllerTest {
         mockMvc.perform(post("/gastos")
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(gastoRequest)))
-                .andExpect(status().isOk()) // Cambiado de isCreated() a isOk()
+                .andExpect(status().isCreated())
                 .andExpect(jsonPath("$.id").value(1))
                 .andExpect(jsonPath("$.mes").value("JANUARY"));
 
